2003-06-06  Jacob Smullyan  <jsmullyan@wnyc.org>

	* pylibs/cronjob.py (CronJob.__call__): use exec rather than eval.
	(CronTab.run_jobs): ignore SIG_CHLD in child process.

2003-06-03  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/configure.in, configure: configure swcron.in.

	* SkunkWeb/Makefile.in: install swcron.

	* SkunkWeb/Services/cron.py, SkunkWeb/swcron.in: first cut at a
	cron daemon.  

	* SkunkWeb/.cvsignore: ignoring swcron.

	* pylibs/cronjob.py: module for defining and executing cron jobs.
	There also needs to be a service that defines a crontab that can
	be configured in sw.conf, and a swpython script to run the crontab 
	(standalone or from the normal cron).
	(CronLogger, CronTab): fixed typos in Logger classes (left out
	"self"), and removed user/group stuff; now keep list of children
	so they can be murdered if they straggle.

2003-05-26  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/vfs/vfs.py (LocalFS.find_path): convenience method for
	walking up the fs to find a file.

2003-05-25  Jacob Smullyan  <smulloni@smullyan.org>

	* SkunkWeb/SkunkWeb/confvars.py.in (DEFAULT_CACHE),
	SkunkWeb/Services/ae_component.py (__initConfig): default cache
	location was being set improperly.

	* util/rpm/skunkweb.spec, util/rmp/skunkweb.init,
	util/rpm/skunkweb.logrotate: more improvements from SR, including
	log rotation and init scripts, now moved into util/rpm.

2003-05-24  Jacob Smullyan  <smulloni@smullyan.org>

	* skunkweb.spec: added some configuration with the intent of
	making the mod_skunkweb build with apache 1.3.

	* pylibs/PyDO/psycopgconn.py, pylibs/PyDO/PyDBI.py
	(_driverConfig): S. Reifschneider's contributed driver for the
	psycopg postgresql driver.

	*:Makefile.in, skunkWeb/Makefile.in,
	SkunkWeb/Services/Makefile.in, SkunkWeb/mod_skunkweb/Makefile.in,
	docs/Makefile.in, pylibs/Makefile.in: another build patch for RPM
	from SR, this time for INSTALL_FLAGS. skunkweb.spec: now builds
	with Python 2.1 or 2.2.
